--- a/poster/index.html
+++ b/poster/index.html
@@ -20,8 +20,8 @@
   <body>
     <h1>Мультфільми для дітей</h1>
     <h2>Мадагаскар</h2>
-    <img width="400" src="/poster/img/Madagascar_film.jpg" alt="Madagascar" />
+    <img width="400" src="../poster/img/Madagascar_film.jpg" alt="Madagascar" />
     <h2>Співай</h2>
-    <img width="400" src="/poster/img/sing.jpeg" alt="Spivay" />
+    <img width="400" src="../poster/img/sing.jpeg" alt="Spivay" />
   </body>
 </html>
