--- a/cart/index.html
+++ b/cart/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>freeCodeCamp Shopping Cart</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../cart/styles.css" />
   </head>
   <body>
     <header>
@@ -24,6 +24,6 @@
       </div>
       <div id="dessert-card-container"></div>
     </main>
-    <script src="script.js"></script>
+    <script src="../cart/script.js"></script>
   </body>
 </html>
