--- a/figma/index.html
+++ b/figma/index.html
@@ -9,7 +9,7 @@
         integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"
         crossorigin="anonymous"
         ></script>
-        <link rel="stylesheet" href="/figma/css/index.css" />
+        <link rel="stylesheet" href="../figma/css/index.css" />
     </head>
     <body>
         <header class="header"> 
@@ -22,23 +22,23 @@
                     <li><a href="#">Contact</a></li>
                 </ul>          
                 <div class="navbar__logo">
-                    <img src="/figma/img/navbar-logo.png" alt="logo">
+                    <img src="../figma/img/navbar-logo.png" alt="logo">
                 </div>         
                 <div class="navbar__social">
-                    <a  href="#"><img src="/figma/img/navbar-social-icons.png" alt="navbar social icons"></a>
+                    <a  href="#"><img src="../figma/img/navbar-social-icons.png" alt="navbar social icons"></a>
                 </div>
                 <div class="navbar__burger">
-                    <a href="#"><img src="/figma/img/burger.png" alt="navbar burger menu"></a>
+                    <a href="#"><img src="../figma/img/burger.png" alt="navbar burger menu"></a>
                 </div>
             </nav>
             <section class="main container">
                 <div class="main__content">
                     <div class="main__title">
-                        <img src="/figma/img/H1.png" alt="The best products start with Figma">
+                        <img src="../figma/img/H1.png" alt="The best products start with Figma">
                         <h1>The best products start with Figma</h1> 
                     </div> 
                     <div class="main__subtitle">
-                        <img src="/figma/img/H4.png" alt="Most calendars">
+                        <img src="../figma/img/H4.png" alt="Most calendars">
                         <p>Most calendars are designed for teams. Slate is designed for freelancers</p> 
                     </div>   
                 </div>   
@@ -58,28 +58,28 @@
                         <p class="features__text">Slate is designed for freelancers.</p>
                     </div>
                     <div class="features__video-mobile">
-                        <img src="/figma/img/features-video-mobile.png" alt="Feature video-screen mobile">
+                        <img src="../figma/img/features-video-mobile.png" alt="Feature video-screen mobile">
                     </div>
                 </div>
                 <div class="features__items">
                     <div class="features__item">
-                        <img src="/figma/img/items-icon1.png" alt="features items-icon1">
+                        <img src="../figma/img/items-icon1.png" alt="features items-icon1">
                         <h3>OpenType features Variable fonts</h3>
                         <p> Slate helps you see how many more days you need to work to reach your financial goal</p>
                     </div>
                     <div class="features__item">
-                        <img src="/figma/img/items-icon2.png" alt="features items-icon2">
+                        <img src="../figma/img/items-icon2.png" alt="features items-icon2">
                         <h3>Design with real data</h3>
                         <p> Slate helps you see how many more days you need to work to reach your financial goal</p>
                     </div>
                     <div class="features__item">
-                        <img src="/figma/img/items-icon3.png" alt="features items-icon3">
+                        <img src="../figma/img/items-icon3.png" alt="features items-icon3">
                         <h3>fastest way to take action</h3>
                         <p> Slate helps you see how many more days you need to work to reach your financial goal</p>
                     </div>
                 </div>
                 <div class="features__video">
-                    <img src="/figma/img/features-video.png" alt="Features Video">
+                    <img src="../figma/img/features-video.png" alt="Features Video">
                 </div>
             </section>
             <section class="organize container">
@@ -98,14 +98,14 @@
                         </div>
                     </div>
                     <div class="organize__column-right">
-                        <img src="/figma/img/organize.png" alt="Organize">
+                        <img src="../figma/img/organize.png" alt="Organize">
                     </div>
                 </div>
             </section>
             <section class="letter container">
                 <div class="letter__column">
                     <div class="letter__column-left">
-                        <img src="/figma/img/letter.png" alt="letter">
+                        <img src="../figma/img/letter.png" alt="letter">
                     </div>
                     <div class="letter__column-right">
                         <div class="letter__text">
